--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/blue"
     tools:context=".SetupActivity">
 
     <android.support.v7.widget.Toolbar
@@ -36,6 +37,8 @@
         android:layout_marginTop="64dp"
         android:ems="10"
         android:hint="Name"
+        android:textColor="#ffffff"
+        android:textColorHint="#ffffff"
         android:inputType="textPersonName"
         android:padding="15dp"
         android:textSize="18sp"
@@ -51,7 +54,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:backgroundTint="@color/colorAccent"
+        android:backgroundTint="@color/colorPrimary"
         android:padding="15dp"
         android:text="@string/setup_btn_name_text"
         android:textAllCaps="false"
@@ -83,6 +86,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:textColor="#ffffff"
+        android:textColorHint="#ffffff"
         android:hint="@string/input_text_description"
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
