--- a/app/src/main/res/layout/blog_list_item.xml
+++ b/app/src/main/res/layout/blog_list_item.xml
@@ -107,7 +107,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
-                android:text="0 Comments"
+                android:text="Donate"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/blog_desc" />
@@ -122,7 +122,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/blog_comment_count"
                 app:layout_constraintTop_toBottomOf="@+id/blog_desc"
-                app:srcCompat="@mipmap/action_comment_icon" />
+                app:srcCompat="@mipmap/ic_launcher_donate" />
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
