--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/buhjvkat"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 
@@ -28,6 +29,8 @@
         android:layout_marginTop="4dp"
         android:ems="10"
         android:hint="Search Place"
+        android:textColorHint="#ffffff"
+        android:textColor="#ffffff"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toStartOf="@+id/search"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,12 +40,10 @@
         android:id="@+id/search"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
         android:background="@color/colorPrimary"
         android:onClick="onClick"
         android:text="Search"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toTopOf="@+id/map"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
