--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:tag="homeFragment"
-    android:background="@drawable/blue"
+    android:background="@drawable/buhjvkat"
     tools:context=".HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
