--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,11 @@
 <resources>
     <color name="colorPrimary">#2196f3</color>
     <color name="colorPrimaryDark">#0069C0</color>
-    <color name="colorAccent">#F44336</color>
+    <color name="colorAccent">#FF40C2</color>
 
     <color name="whiteTransparentHalf">#80ffffff</color>
 
     <color name="likeBtnGray">#747474</color>
     <color name="likeBtnAccent">#F44336</color>
+    <color name="Transparent"></color>
 </resources>
