--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -6,18 +6,18 @@
         android:id="@+id/bottom_action_home"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/bottom_home_text" />
-    <item
-        android:id="@+id/bottom_action_notif"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/bottom_notification_text" />
+    <!--<item-->
+        <!--android:id="@+id/bottom_action_notif"-->
+        <!--android:icon="@drawable/ic_notifications_black_24dp"-->
+        <!--android:title="@string/bottom_notification_text" />-->
     <item
         android:id="@+id/bottom_action_location"
         android:icon="@drawable/baseline_place_black_18dp"
         android:title="Find Nearby" />
-    <item
-        android:id="@+id/bottom_action_chat"
-        android:icon="@drawable/baseline_chat_black_18dp"
-        android:title="@string/bottom_chat_text" />
+    <!--<item-->
+        <!--android:id="@+id/bottom_action_chat"-->
+        <!--android:icon="@drawable/baseline_chat_black_18dp"-->
+        <!--android:title="@string/bottom_chat_text" />-->
     <item
         android:id="@+id/bottom_action_account"
         android:icon="@drawable/ic_person_black_24dp"
